--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -4,8 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][HE]
-Pos=257,389
+Pos=4,6
 Size=608,326
+Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Size=1280,1024
 Collapsed=0
 
 [Docking][Data]
