more imgui windows for hardware info

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -12,5 +12,39 @@ Collapsed=0
 Size=1280,1024
 Collapsed=0
 
+[Window][Tests]
+Pos=27,27
+Size=415,218
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=861,14
+Size=415,341
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=60,60
+Size=708,156
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,104
+Collapsed=0
+
+[Window][hola]
+Pos=27,27
+Size=415,218
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Hardware]
+Pos=27,27
+Size=415,218
+Collapsed=0
+DockId=0x00000001,1
+
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=347,55 Size=415,218 Selected=0x0A7F6D31
 
