trying to render fbx(still not work

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -13,13 +13,13 @@ Size=1280,1024
 Collapsed=0
 
 [Window][Tests]
-Pos=38,41
+Pos=7,91
 Size=415,218
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=821,126
+Pos=822,126
 Size=415,320
 Collapsed=0
 
@@ -40,11 +40,11 @@ Collapsed=0
 DockId=0x00000001,1
 
 [Window][Hardware]
-Pos=38,41
+Pos=7,91
 Size=415,218
 Collapsed=0
 DockId=0x00000001,1
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=358,69 Size=415,218 Selected=0x0A7F6D31
+DockNode  ID=0x00000001 Pos=135,11 Size=415,218 Selected=0x1B3D98FF
 
