camera in imgui window

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=255,304
+Pos=255,72
 Size=400,400
 Collapsed=0
 
@@ -9,17 +9,20 @@ Size=608,326
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
-Size=1280,1024
+Size=1371,845
 Collapsed=0
 
 [Window][Tests]
-Pos=61,38
-Size=415,218
+ViewportPos=148,100
+ViewportId=0x3DD03744
+Pos=989,0
+Size=409,772
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=822,126
+ViewportPos=98,477
+ViewportId=0x8FC55800
 Size=415,320
 Collapsed=0
 
@@ -37,14 +40,41 @@ Collapsed=0
 Pos=27,27
 Size=415,218
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-Pos=61,38
-Size=415,218
+ViewportPos=148,100
+ViewportId=0x3DD03744
+Pos=989,0
+Size=409,772
 Collapsed=0
 DockId=0x00000001,1
 
+[Window][Scene]
+ViewportPos=148,100
+ViewportId=0x3DD03744
+Size=987,772
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Console]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Conasole]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Test]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=381,66 Size=415,218 Selected=0x1B3D98FF
+DockNode    ID=0x00000002 Pos=148,100 Size=1398,772 Split=X
+  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=559,569 Selected=0xE192E354
+  DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=232,569 Selected=0x1B3D98FF
+DockSpace   ID=0x8B93E3BD Pos=37,31 Size=1371,845 CentralNode=1
 
