posicion de consola arreglada :) modificado desde imgui.ini

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -9,21 +9,20 @@ Size=608,326
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
-Size=1371,845
+Size=1280,1024
 Collapsed=0
 
 [Window][Tests]
-ViewportPos=148,100
+ViewportPos=94,43
 ViewportId=0x3DD03744
-Pos=989,0
-Size=409,772
+Pos=1223,0
+Size=440,960
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000009,1
 
 [Window][Dear ImGui Metrics/Debugger]
-ViewportPos=98,477
-ViewportId=0x8FC55800
-Size=415,320
+Pos=539,434
+Size=32,233
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
@@ -43,38 +42,68 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-ViewportPos=148,100
+ViewportPos=94,43
 ViewportId=0x3DD03744
-Pos=989,0
-Size=409,772
+Pos=1223,0
+Size=440,960
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000009,0
 
 [Window][Scene]
-ViewportPos=148,100
+ViewportPos=21,13
 ViewportId=0x3DD03744
-Size=987,772
+Size=1487,1028
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][Console]
-Pos=60,60
-Size=32,35
+ViewportPos=94,43
+ViewportId=0x3DD03744
+Pos=0,771
+Size=1221,189
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Conasole]
 Pos=60,60
 Size=32,35
 Collapsed=0
+DockId=0x8B93E3BD,1
 
 [Window][Test]
 Pos=60,60
 Size=32,35
 Collapsed=0
 
+[Window][SceneTest]
+ViewportPos=94,43
+ViewportId=0x3DD03744
+Size=1221,769
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Test2]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Hardware2]
+Pos=60,60
+Size=325,99
+Collapsed=0
+
+[Window][Hardware23]
+Pos=153,399
+Size=325,99
+Collapsed=0
+
 [Docking][Data]
-DockNode    ID=0x00000002 Pos=148,100 Size=1398,772 Split=X
-  DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=559,569 Selected=0xE192E354
-  DockNode  ID=0x00000001 Parent=0x00000002 SizeRef=232,569 Selected=0x1B3D98FF
-DockSpace   ID=0x8B93E3BD Pos=37,31 Size=1371,845 CentralNode=1
+DockNode        ID=0x00000002 Pos=94,43 Size=1663,960 Split=X
+  DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=923,686 Split=Y
+    DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,549 Split=X
+      DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
+      DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=357,936
+    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,135 Selected=0x49278EEE
+  DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=333,686 Selected=0x0A7F6D31
+DockSpace       ID=0x8B93E3BD Pos=338,78 Size=1280,1024 CentralNode=1
 
