console basic work done

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -13,16 +13,17 @@ Size=1280,1024
 Collapsed=0
 
 [Window][Tests]
-ViewportPos=94,43
+ViewportPos=164,29
 ViewportId=0x3DD03744
 Pos=1223,0
 Size=440,960
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000009,0
 
 [Window][Dear ImGui Metrics/Debugger]
-Pos=539,434
-Size=32,233
+ViewportPos=1357,276
+ViewportId=0x8FC55800
+Size=267,233
 Collapsed=0
 
 [Window][Dear ImGui Debug Log]
@@ -42,12 +43,12 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-ViewportPos=94,43
+ViewportPos=164,29
 ViewportId=0x3DD03744
 Pos=1223,0
 Size=440,960
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000009,1
 
 [Window][Scene]
 ViewportPos=21,13
@@ -57,10 +58,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-ViewportPos=94,43
+ViewportPos=164,29
 ViewportId=0x3DD03744
-Pos=0,771
-Size=1221,189
+Pos=0,717
+Size=1221,243
 Collapsed=0
 DockId=0x00000007,0
 
@@ -76,9 +77,9 @@ Size=32,35
 Collapsed=0
 
 [Window][SceneTest]
-ViewportPos=94,43
+ViewportPos=164,29
 ViewportId=0x3DD03744
-Size=1221,769
+Size=1221,715
 Collapsed=0
 DockId=0x00000004,0
 
@@ -97,13 +98,21 @@ Pos=153,399
 Size=325,99
 Collapsed=0
 
+[Window][Console2]
+ViewportPos=115,38
+ViewportId=0x3DD03744
+Pos=0,771
+Size=1221,189
+Collapsed=0
+DockId=0x00000007,1
+
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=94,43 Size=1663,960 Split=X
+DockNode        ID=0x00000002 Pos=164,29 Size=1663,960 Split=X
   DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=923,686 Split=Y
-    DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,549 Split=X
+    DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,715 Split=X
       DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
       DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=357,936
-    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,135 Selected=0x49278EEE
+    DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,243 Selected=0x49278EEE
   DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=333,686 Selected=0x0A7F6D31
 DockSpace       ID=0x8B93E3BD Pos=338,78 Size=1280,1024 CentralNode=1
 
