--- a/GameEngine/_GameEngineProject.vcxproj
+++ b/GameEngine/_GameEngineProject.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="p2DynArray.h" />
     <ClInclude Include="p2Point.h" />
     <ClInclude Include="Primitive.h" />
+    <ClInclude Include="R_Console.h" />
     <ClInclude Include="R_Mesh.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="T_MeshLoader.h" />
@@ -158,6 +159,7 @@
     <ClCompile Include="External_Libraries\ImGui\imgui_tables.cpp" />
     <ClCompile Include="External_Libraries\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="glmath.cpp" />
+    <ClCompile Include="Globals.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -167,6 +169,7 @@
     <ClCompile Include="ModuleRenderer3D.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="Primitive.cpp" />
+    <ClCompile Include="R_Console.cpp" />
     <ClCompile Include="R_Mesh.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="T_MeshLoader.cpp" />
