stabilizing process memory and improving buffers

--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -13,10 +13,10 @@ Size=1280,1024
 Collapsed=0
 
 [Window][Tests]
-ViewportPos=126,7
+ViewportPos=39,-1
 ViewportId=0x3DD03744
-Pos=1155,0
-Size=178,782
+Pos=1396,0
+Size=215,997
 Collapsed=0
 DockId=0x00000009,0
 
@@ -43,10 +43,10 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-ViewportPos=126,7
+ViewportPos=39,-1
 ViewportId=0x3DD03744
-Pos=1155,0
-Size=178,782
+Pos=1396,0
+Size=215,997
 Collapsed=0
 DockId=0x00000009,1
 
@@ -58,10 +58,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-ViewportPos=126,7
+ViewportPos=39,-1
 ViewportId=0x3DD03744
-Pos=0,584
-Size=1153,198
+Pos=0,745
+Size=1394,252
 Collapsed=0
 DockId=0x00000007,0
 
@@ -77,9 +77,9 @@ Size=32,35
 Collapsed=0
 
 [Window][SceneTest]
-ViewportPos=126,7
+ViewportPos=39,-1
 ViewportId=0x3DD03744
-Size=1153,582
+Size=1394,743
 Collapsed=0
 DockId=0x00000004,0
 
@@ -107,12 +107,12 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=126,7 Size=1333,782 Split=X
+DockNode        ID=0x00000002 Pos=39,-1 Size=1611,997 Split=X
   DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1153,686 Split=Y
     DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,715 Split=X
       DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
       DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=357,936
     DockNode    ID=0x00000007 Parent=0x00000008 SizeRef=1258,243 Selected=0x49278EEE
-  DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=178,686 Selected=0x0A7F6D31
+  DockNode      ID=0x00000009 Parent=0x00000002 SizeRef=178,686 Selected=0x1B3D98FF
 DockSpace       ID=0x8B93E3BD Pos=338,78 Size=1280,1024 CentralNode=1
 
