--- a/GameEngine/Engine/imgui.ini
+++ b/GameEngine/Engine/imgui.ini
@@ -13,10 +13,10 @@ Size=1280,1024
 Collapsed=0
 
 [Window][Tests]
-ViewportPos=39,-1
+ViewportPos=-14,30
 ViewportId=0x3DD03744
-Pos=1396,0
-Size=215,997
+Pos=1277,0
+Size=197,771
 Collapsed=0
 DockId=0x00000009,0
 
@@ -43,10 +43,10 @@ Collapsed=0
 DockId=0x8B93E3BD,1
 
 [Window][Hardware]
-ViewportPos=39,-1
+ViewportPos=-14,30
 ViewportId=0x3DD03744
-Pos=1396,0
-Size=215,997
+Pos=1277,0
+Size=197,771
 Collapsed=0
 DockId=0x00000009,1
 
@@ -58,10 +58,10 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Console]
-ViewportPos=39,-1
+ViewportPos=-14,30
 ViewportId=0x3DD03744
-Pos=0,745
-Size=1394,252
+Pos=0,576
+Size=1275,195
 Collapsed=0
 DockId=0x00000007,0
 
@@ -77,9 +77,9 @@ Size=32,35
 Collapsed=0
 
 [Window][SceneTest]
-ViewportPos=39,-1
+ViewportPos=-14,30
 ViewportId=0x3DD03744
-Size=1394,743
+Size=1275,574
 Collapsed=0
 DockId=0x00000004,0
 
@@ -107,7 +107,7 @@ Collapsed=0
 DockId=0x00000007,1
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=39,-1 Size=1611,997 Split=X
+DockNode        ID=0x00000002 Pos=-14,30 Size=1474,771 Split=X
   DockNode      ID=0x00000008 Parent=0x00000002 SizeRef=1153,686 Split=Y
     DockNode    ID=0x00000006 Parent=0x00000008 SizeRef=1258,715 Split=X
       DockNode  ID=0x00000004 Parent=0x00000006 SizeRef=988,936 Selected=0x3D2516CD
